Add customizable source URL

--- a/app/views/shared/_links.html.haml
+++ b/app/views/shared/_links.html.haml
@@ -5,7 +5,7 @@
   ·
   = link_to t(".about"), about_path
   ·
-  = link_to t(".source"), "https://github.com/Retrospring/retrospring"
+  = link_to t(".source"), Retrospring::Version.source_url
   ·
   = link_to t(".terms"), terms_path
   ·
